--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h1 class="title is-1 publication-title">DataDAM: Efficient Dataset Distillation with Attention Matching</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href=""><b>Ahmad Sajedi</b></a><sup>1*</sup>,</span>
+              <a href="https://ahmadsajedii.github.io/"><b>Ahmad Sajedi</b></a><sup>1*</sup>,</span>
             <span class="author-block">
               <a href="https://skhaki18.github.io"><b>Samir Khaki</b></a><sup>1*</sup>,</span>
             <span class="author-block">
@@ -99,9 +99,9 @@
             <span class="author-block">
               <a href="">Lucy Z. Liu</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="">Yuri A. Lawryshyn</a><sup>1</sup>,</span>
+              <a href="https://www.labs.chem-eng.utoronto.ca/lawryshyn/">Yuri A. Lawryshyn</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="">Konstantinos N. Plataniotis</a><sup>1</sup></span>
+              <a href="https://www.comm.utoronto.ca/~kostas/">Konstantinos N. Plataniotis</a><sup>1</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
