Updated Website Material

--- a/index.html
+++ b/index.html
@@ -143,6 +143,28 @@
                   <span>Video</span>
                 </a>
               </span>
+
+              <span class="link-block">
+                <a href="./static/img/DataDAM-ICCV23-Poster.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-image"></i>
+                  </span>
+                  <span>Poster</span>
+                  </a>
+              </span>
+
+
+              <span class="link-block">
+                <a href="./static/img/DataDAM-ICCV23-Presentation-Slides.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-file-powerpoint"></i>
+                  </span>
+                  <span>Presentation</span>
+                  </a>
+              </span>
+
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/DataDistillation/DataDAM"
@@ -162,6 +184,7 @@
                   </span>
                   <span>Data</span>
                   </a>
+              </span>
             </div>
 
           </div>
@@ -205,47 +228,51 @@
 </section>
 
 
-<!-- <section class="hero is-light is-small">
+<section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+          <!-- <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/steve.mp4"
                     type="video/mp4">
-          </video>
+          </video> -->
+          <figure>
+            <img src="static/img/ImageNetteFullGrid_ipc10.jpg" alt="Image 1" style="max-width: 101.25%;">
+            <figcaption style="text-align: center;">ImageNette (128x128)</figcaption>
+          </figure>
         </div>
         <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/chair-tp.mp4"
-                    type="video/mp4">
-          </video>
+          <figure>
+            <img src="static/img/ImageSquackFullGrid_ipc10.jpg" alt="Image 1" style="max-width: 101.25%;">
+            <figcaption style="text-align: center;">ImageSquack (128x128)</figcaption>
+          </figure>
         </div>
         <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/shiba.mp4"
-                    type="video/mp4">
-          </video>
+          <figure>
+            <img src="static/img/ImageWoofFullGrid_ipc10.jpg" alt="Image 1" style="max-width: 101.25%;">
+            <figcaption style="text-align: center;">ImageWoof (128x128)</figcaption>
+          </figure>
         </div>
         <div class="item item-fullbody">
-          <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/fullbody.mp4"
-                    type="video/mp4">
-          </video>
+          <figure>
+            <img src="static/img/VGG_16_Grid.jpg" alt="Image 1" style="max-width: 126.25%;">
+            <figcaption style="text-align: center;">CIFAR10 VGG16 IPC 50</figcaption>
+          </figure>
         </div>
         <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/blueshirt.mp4"
-                    type="video/mp4">
-          </video>
+          <figure>
+            <img src="static/img/AlexNetGrid.jpg" alt="Image 1" style="max-width: 126.25%;">
+            <figcaption style="text-align: center;">CIFAR10 AlexNet IPC 50</figcaption>
+          </figure>
         </div>
         <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/mask.mp4"
-                    type="video/mp4">
-          </video>
+          <figure>
+            <img src="static/img/FullNoiseGrid.jpg" alt="Image 1" style="max-width: 126.25%">
+            <figcaption style="text-align: center;">CIFAR10 Gaussian Noise Initialization</figcaption>
+          </figure>
         </div>
-        <div class="item item-coffee">
+        <!-- <div class="item item-coffee">
           <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/coffee.mp4"
                     type="video/mp4">
@@ -256,11 +283,11 @@
             <source src="./static/videos/toby2.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 
 <section class="section">
