--- a/index.html
+++ b/index.html
@@ -313,6 +313,28 @@
     </div>
     <!--/ Abstract. -->
 
+
+<!-- Method -->
+<section class="hero is-small">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Comparison</h2>
+        <div class="content has-text-justified">
+          <p>
+             </p>
+          <figure>
+            <img src="img/DataDAM_pipeline.png" alt="MY ALT TEXT" style="max-width: 100%;>
+            <figcaption style="text-align: center;"></figcaption>
+          </figure>         
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Method --> 
+
+    
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
