--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Comparison</h2>
+        <h2 class="title is-3">Method(Cooming Soon)</h2>
         <div class="content has-text-justified">
           <p>
              </p>
