--- a/index.html
+++ b/index.html
@@ -321,10 +321,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method(Cooming Soon)</h2>
         <div class="content has-text-justified">
-          <p>
-             </p>
           <figure>
-            <img src="img/DataDAM_pipeline.png" alt="MY ALT TEXT" style="max-width: 100%;>
+            <img src="static/img/DataDAM_pipeline.png" style="max-width: 100%;>
             <figcaption style="text-align: center;"></figcaption>
           </figure>         
         </div>
