--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <h2 class="title is-3">Method(Cooming Soon)</h2>
         <div class="content has-text-justified">
           <figure>
-            <img src="static/img/DataDAM_pipeline.png" style="max-width: 100%;>
+            <img src="static/img/DataDAM.jpg" style="max-width: 100%;>
             <figcaption style="text-align: center;"></figcaption>
           </figure>         
         </div>
