--- a/index.html
+++ b/index.html
@@ -321,10 +321,19 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method(Cooming Soon)</h2>
         <div class="content has-text-justified">
+          <p>Dataset Distillation with Attention Matching (DataDAM) is meticulously designed to efficiently capture the most crucial and distinctive
+          information from real datasets. This method consists of two essential components: Spatial Attention Matching (SAM) and Last-Layer Feature
+          Alignment. SAM aligns attention maps, while the Last-Layer Feature Alignment synchronizes embedded representations from different layers
+          in randomly initialized neural networks. DataDAM is a streamlined and effective approach to distilling essential dataset insights.</p>
           <figure>
             <img src="static/img/DataDAM.jpg" style="max-width: 100%;>
             <figcaption style="text-align: center;"></figcaption>
-          </figure>         
+          </figure> 
+          <h2 class="subtitle has-text-centered">
+        (a) Illustration of the proposed DataDAM method. DataDAM includes a Spatial Attention Matching (SAM) module to capture the dataset's 
+        distribution and a complementary loss for matching the feature distributions in the last layer of the encoder network. (b) The internal
+         architecture of the SAM module.
+       </h2>
         </div>
       </div>
     </div>
